# MachineLearning

./: .gitignore  .pre-commit-config.yaml  README.md
Project1/: Project 1.ipynb  README.md  Untitled.ipynb  dump.ipynb  testing our Lasso vs SKlearn.ipynb
Project1/.ipynb_checkpoints/: Project 1-checkpoint.ipynb  dump-checkpoint.ipynb  testing our Lasso vs SKlearn-checkpoint.ipynb
Project1/data/: conf_int_complexity1.csv  conf_int_complexity2.csv  conf_int_complexity3.csv  conf_int_complexity4.csv  conf_int_complexity5.csv
Project1/ex6/: ex6.py
Project2/: README.md  pyproject.toml  run_log_reg.py  setup.cfg  task2.py  task3.py  task4.py  task5.py  test_nn.py  test_nn_torch.py
Project2/csnet/: NeuralNetwork.py  activation.py  data.py  logistic_regression.py  loss.py  metrics.py  nn.py  optim.py  regression.py  torch_nn.py  trainer.py  trainer_force_plots.py  utils.py
Project2/notebooks/: project_2.ipynb  solution_part_a.py  test_nn_torch.py
Project2/solutions/: solution_part_a.py  task2.py  task3.py  task4.py  task5.py
Project2/tests/: test_activation.py  test_regression.py  test_sgd.py
