[metadata]
name = csnet
description = Implementation of machine learning methods from FYS-STK4155.
long_description = file: README.md
long_description_content_type = text/markdown
author = Tom-Ruben Traavik Kvalvaag, Michal Jan Odorczuk, William Ho
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
	autograd>=1.3
    matplotlib>=3.4.3
    numpy==1.20.0
    pandas>=1.3.3
    pillow>=8.3.2
    scikit-learn>=1.0
    scipy>=1.7.1
    seaborn>=0.11.2
	torch>=1.10.0
python_requires = >=3.9

[options.packages.find]
where = csnet
exclude =
    *tests*
    build*
    dist*
    docs*
    tests*
    *.tests

[options.extras_require]
dev =
    autopep8
    flake8
    isort
    mypy>=0.902
    pre-commit
    pyupgrade
    types-all
testing =
    coverage[toml]
    pytest>=4.0.0

[pydocstyle]
convention = numpy

[flake8]
ignore = E501,F403,F401,W503,E203
max-line-length = 79
exclude =
    .venv,
    tests,
    __pycache__,
    build,
    dist

[mypy]
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
